# factotum

./: .gitignore  .travis.yml  CHANGELOG  Cargo.toml  Makefile  README  README.md  Vagrantfile
.github/workflows/: cd.yml  ci.yml
.travis/: build.sh
.travis/deploy/: deploy.factfile
.travis/deploy/tasks/: check_release.rb  provision.sh  release_config.yaml  ship_release.sh
deploy/: deploy.factfile
deploy/tasks/: provision.sh  ship_release.sh
factotum-server/: Cargo.toml
factotum-server/src/: main.rs
factotum-server/src/factotum_server/: mod.rs  tests.rs
factotum-server/src/factotum_server/command/: mod.rs  tests.rs
factotum-server/src/factotum_server/dispatcher/: mod.rs  tests.rs
factotum-server/src/factotum_server/persistence/: mod.rs  tests.rs
factotum-server/src/factotum_server/responder/: mod.rs  tests.rs
factotum-server/src/factotum_server/server/: mod.rs  tests.rs
samples/: echo-with-dynamic-name-from-tag.factfile  echo-with-dynamic-name.factfile  echo-with-variables.factotum  echo.factfile  noop.factfile  sleep.factfile  variables.factfile
src/: main.rs
src/factotum/: mod.rs  tests.rs
src/factotum/executor/: mod.rs  tests.rs
src/factotum/factfile/: mod.rs  tests.rs
src/factotum/fileparser/: mod.rs  tests.rs
src/factotum/parser/: mod.rs  tests.rs
tests/resources/: example_invalid_no_continue.factfile  example_invalid_no_name.factfile  example_invalid_terminate_continue_same.factfile  example_ok.factotum  example_wrong_type.factotum  invalid_json.factfile
vagrant/: push.bash  up.bash  up.guidance  up.playbooks
(+26 files in other folders)
