[package]
name = "factotum"
version = "0.6.0-rc7"
authors = ["Ed Lewis <support@snowplowanalytics.com>", "Josh Beemster <support@snowplowanalytics.com>"]

[dependencies]
docopt = "0.6"
log = "0.3.5"
log4rs = "0.3.3"
daggy = "0.4.0"
rustc-serialize = "0.3.18"
valico = "0.8.2"
chrono = "0.2"
colored = "1.2"
mustache = "0.7.0"
rand = "0.3"
rust-crypto = "^0.2"
uuid = { version = "0.2", features = ["v4"] }
hyper = "^0.10"
hyper-native-tls = "0.3.0"
libc = "0.2.17"
ifaces = "0.0.3"
dns-lookup = "0.2.1"
